--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,7 @@
     -->
     <title>React App</title>
   </head>
-  <header id="navRoot"></header>
-  <body class="bg-dark vh-100 text-white">
+  <body style="background-color: #1E1E1E !important;">
     <noscript>You need to enable JavaScript to run this app</noscript>
     <div id="root"></div>
     <!--
@@ -42,6 +41,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <footer id="fotRoot"> </footer>
   </body>
 </html>
